fix: change webhook URL from HTTPS to HTTP to avoid SSL certificate issues

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             const textError = document.getElementById('textError');
             
             // Fixed API settings
-            const apiUrl = 'https://13.60.225.245/webhook/3acf85df-1dac-420a-a88c-960b2211d4a8';
+            const apiUrl = 'http://13.60.225.245/webhook/3acf85df-1dac-420a-a88c-960b2211d4a8';
             const httpMethod = 'POST';
             
             // Clear previous messages
