--- a/index.html
+++ b/index.html
@@ -209,6 +209,11 @@
             const apiUrl = 'http://13.60.225.245/webhook/3acf85df-1dac-420a-a88c-960b2211d4a8';
             const httpMethod = 'POST';
             
+            console.log('=== FORM DEBUG ===');
+            console.log('API URL:', apiUrl);
+            console.log('HTTP Method:', httpMethod);
+            console.log('==================');
+            
             // Clear previous messages
             textError.textContent = '';
             resultDiv.innerHTML = '';
@@ -234,16 +239,25 @@
                     timestamp: new Date().toISOString()
                 };
 
+                console.log('=== REQUEST DEBUG ===');
                 console.log('Sending request to:', apiUrl);
                 console.log('Method:', httpMethod);
                 console.log('Headers:', headers);
                 console.log('Body:', requestBody);
+                console.log('Body JSON:', JSON.stringify(requestBody));
+                console.log('====================');
 
                 const response = await fetch(apiUrl, {
                     method: httpMethod,
                     headers: headers,
                     body: JSON.stringify(requestBody)
                 });
+
+                console.log('=== RESPONSE DEBUG ===');
+                console.log('Response status:', response.status);
+                console.log('Response statusText:', response.statusText);
+                console.log('Response headers:', [...response.headers.entries()]);
+                console.log('======================');
 
                 console.log('Response status:', response.status);
                 console.log('Response headers:', response.headers);
