--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
             const textError = document.getElementById('textError');
             
             // Fixed API settings
-            const apiUrl = 'https://13.60.225.245/webhook/3acf85df-1dac-420a-a88c-960b2211d4a8';
+            const apiUrl = 'https://n8n.tradersunion.com/webhook/3acf85df-1dac-420a-a88c-960b2211d4a8';
             const httpMethod = 'POST';
             
             console.log('=== FORM DEBUG ===');
@@ -296,7 +296,7 @@
                         <div class="error">
                             ❌ Ошибка SSL сертификата!<br>
                             <small>Нужно принять сертификат сервера</small><br>
-                            <a href="https://13.60.225.245/webhook/3acf85df-1dac-420a-a88c-960b2211d4a8" target="_blank" style="color: #667eea; text-decoration: underline;">
+                            <a href="https://n8n.tradersunion.com/webhook/3acf85df-1dac-420a-a88c-960b2211d4a8" target="_blank" style="color: #667eea; text-decoration: underline;">
                                 Нажми сюда, прими сертификат и попробуй снова
                             </a>
                         </div>
